--- a/share/man/man1/builtin.1
+++ b/share/man/man1/builtin.1
@@ -336,7 +336,7 @@ in
 .Mx 0.3 .
 .Sh AUTHORS
 This manual page was written by
-.An Sheldon Hearn Aq sheldonh@FreeBSD.org 
+.An Sheldon Hearn Aq Mt sheldonh@FreeBSD.org 
 and revised for 
 .Mx 0.3
-by .An Lucas Holt Aq luke@MidnightBSD.org .
+by .An Lucas Holt Aq Mt luke@MidnightBSD.org .
