Deprecate minigzip(1) in preparation of removing it from base system.
Reviewed by:	emaste, pauamma
Differential Revision: https://reviews.freebsd.org/D36000

(cherry picked from commit 0404b8c88fd857aae9ecf73ab9e1b1c2a8fd7ae1)

--- a/usr.bin/minigzip/minigzip.1
+++ b/usr.bin/minigzip/minigzip.1
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: stable/11/usr.bin/minigzip/minigzip.1 235802 2012-05-22 19:40:54Z delphij $
 .\"
-.Dd May 22, 2012
+.Dd August 1, 2022
 .Dt MINIGZIP 1
 .Os
 .Sh NAME
@@ -74,6 +74,14 @@ option is specified,
 .Nm
 writes the results to standard output and keep the original files
 unchanged.
+.Sh DEPRECATION NOTICE
+.Nm
+is deprecated and will be removed from future versions of the
+.Fx
+base system.
+Users should use
+.Xr gzip 1
+instead.
 .Sh SEE ALSO
 .Xr gzip 1
 .Sh AUTHORS
