--- a/usr.sbin/midnightbsd-update/midnightbsd-update.8
+++ b/usr.sbin/midnightbsd-update/midnightbsd-update.8
@@ -23,7 +23,8 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd September 24, 2019
+.\"
+.Dd March 29, 2022
 .Dt FREEBSD-UPDATE 8
 .Os
 .Sh NAME
@@ -35,12 +36,13 @@
 .Op Fl d Ar workdir
 .Op Fl f Ar conffile
 .Op Fl F
+.Op Fl j Ar jail
 .Op Fl k Ar KEY
 .Op Fl r Ar newrelease
 .Op Fl s Ar server
 .Op Fl t Ar address
 .Op Fl -not-running-from-cron
-.Cm command ...
+.Ar command ...
 .Sh DESCRIPTION
 The
 .Nm
@@ -84,6 +86,14 @@ Read configuration options from
 Force
 .Nm Cm fetch
 to proceed in the case of an unfinished upgrade.
+.It Fl j Ar jail
+Operate on the given jail specified by
+.Va jid
+or
+.Va name .
+(The version of the installed userland is detected and the
+.Fl -currently-running
+option is no more required.)
 .It Fl k Ar KEY
 Trust an RSA key with SHA256 of
 .Ar KEY .
@@ -91,7 +101,8 @@ Trust an RSA key with SHA256 of
 .It Fl r Ar newrelease
 Specify the new release (e.g., 1.2-RELEASE) to which
 .Nm
-should upgrade (upgrade command only).
+should upgrade
+.Pq Cm upgrade No command only .
 .It Fl s Ar server
 Fetch files from the specified server or server pool.
 (default: read value from configuration file.)
@@ -104,11 +115,14 @@ command, if any, to
 .It Fl -not-running-from-cron
 Force
 .Nm Cm fetch
-to proceed when there is no controlling tty.
+to proceed when there is no controlling
+.Xr tty 4 .
 This is for use by automated scripts and orchestration tools.
 Please do not run
 .Nm Cm fetch
-from crontab or similar using this flag, see:
+from
+.Xr crontab 5
+or similar using this flag, see:
 .Nm Cm cron
 .It Fl -currently-running Ar release
 Do not detect the currently-running release; instead, assume that the
@@ -175,7 +189,9 @@ If your clock is set to local time, adding the line
 .Pp
 .Dl 0 3 * * * root /usr/sbin/midnightbsd-update cron
 .Pp
-to /etc/crontab will check for updates every night.
+to
+.Pa /etc/crontab
+will check for updates every night.
 If your clock is set to UTC, please pick a random time
 other than 3AM, to avoid overly imposing an uneven load
 on the server(s) hosting the updates.
@@ -187,6 +203,20 @@ System", since if the system has been tampered with
 it cannot be trusted to operate correctly.
 If you intend to use this command for intrusion-detection
 purposes, make sure you boot from a secure disk (e.g., a CD).
+.El
+.Sh ENVIRONMENT
+.Bl -tag -width "PAGER"
+.It Ev PAGER
+The pager program used to present various reports during the execution.
+.Po
+Default:
+.Dq Pa /usr/bin/less .
+.Pc
+.Pp
+.Ev PAGER
+can be set to
+.Dq cat
+when a non-interactive pager is desired.
 .El
 .Sh FILES
 .Bl -tag -width "/etc/midightbsd-update.conf"
@@ -200,6 +230,7 @@ Default location where
 stores temporary files and downloaded updates.
 .El
 .Sh SEE ALSO
-.Xr midnightbsd-update.conf 5
+.Xr midnightbsd-update.conf 5 ,
+.Xr nextboot 8
 .Sh AUTHORS
 .An Colin Percival Aq Mt cperciva@FreeBSD.org
