--- a/share/man/man5/rc.conf.5
+++ b/share/man/man5/rc.conf.5
@@ -22,9 +22,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
-.\"
-.Dd June 24, 2022
+.Dd June 28, 2022
 .Dt RC.CONF 5
 .Os
 .Sh NAME
@@ -82,14 +80,14 @@ which will be included by the
 function.
 For jail configurations you could use the file
 .Pa /etc/rc.conf.d/jail
-to store jail specific configuration options.
+to store jail-specific configuration options.
 If
 .Va local_startup
 contains
 .Pa /usr/local/etc/rc.d
 and
 .Pa /opt/conf ,
-.Pa /usr/local/rc.conf.d/jail
+.Pa /usr/local/etc/rc.conf.d/jail
 and
 .Pa /opt/conf/rc.conf.d/jail
 will be loaded.
