--- a/share/man/man4/tslog.4
+++ b/share/man/man4/tslog.4
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd March 4, 2022
+.Dd June 1, 2022
 .Dt TSLOG 4
 .Os
 .Sh NAME
@@ -38,8 +38,10 @@ place the following line in the kernel configuration file:
 .Sh DESCRIPTION
 .Nm
 is a boot-time event tracing facility.
-Its purpose is to ease diagnosing and reducing the overall
-.Fx
+It is sutible for tracing recursive events
+based on functions entries and exists.
+Its purpose is to ease pinpointing and reducing the overall
+.Mx
 boot time by generating detailed timing information.
 .Pp
 .Nm
