Add deprecation notices for OPIE.
Differential Revision: https://reviews.freebsd.org/D36593

--- a/lib/libpam/modules/pam_opieaccess/pam_opieaccess.8
+++ b/lib/libpam/modules/pam_opieaccess/pam_opieaccess.8
@@ -33,7 +33,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"
-.Dd October 26, 2007
+.Dd September 15, 2022
 .Dt PAM_OPIEACCESS 8
 .Os
 .Sh NAME
@@ -45,6 +45,10 @@
 .Ar control-flag
 .Pa pam_opieaccess
 .Op Ar options
+.Sh DEPRECATION NOTICE
+OPIE is deprecated, and may not be available in
+.Fx 14.0
+and later.
 .Sh DESCRIPTION
 The
 .Nm
