--- a/lib/libpam/modules/pam_opie/pam_opie.8
+++ b/lib/libpam/modules/pam_opie/pam_opie.8
@@ -33,7 +33,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"
-.Dd July 7, 2001
+.Dd September 15, 2022
 .Dt PAM_OPIE 8
 .Os
 .Sh NAME
@@ -45,6 +45,10 @@
 .Ar control-flag
 .Pa pam_opie
 .Op Ar options
+.Sh DEPRECATION NOTICE
+OPIE is deprecated, and may not be available in
+.Fx 14.0
+and later.
 .Sh DESCRIPTION
 The OPIE authentication service module for PAM,
 .Nm
