uname.1: Clarify the -r option
It is some times hard to understand the difference between
kernel version and userland version. So clarify the -r option
of uname(1) in terms of a printed kernel version.

While here, add some cross references:

- cross reference freebsd-version(1) in uname(1)
- cross reference freebsd-version(1) and uname(1) in freebsd-update(8)

PR:		265594
Reported by:	rwatson
Reviewed by:	gbe, imp
Differential Revision:	https://reviews.freebsd.org/D36516

(cherry picked from commit 8f98a937ed726399b89e87e95769a9adc809281a)

--- a/usr.sbin/midnightbsd-update/midnightbsd-update.8
+++ b/usr.sbin/midnightbsd-update/midnightbsd-update.8
@@ -24,8 +24,8 @@
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd March 29, 2022
-.Dt FREEBSD-UPDATE 8
+.Dd September 10, 2022
+.Dt MIDNIGHTBSD-UPDATE 8
 .Os
 .Sh NAME
 .Nm midnightbsd-update
@@ -230,6 +230,8 @@ Default location where
 stores temporary files and downloaded updates.
 .El
 .Sh SEE ALSO
+.Xr midnightbsd-version 1 ,
+.Xr uname 1 ,
 .Xr midnightbsd-update.conf 5 ,
 .Xr nextboot 8
 .Sh AUTHORS
