--- a/share/man/man7/tuning.7
+++ b/share/man/man7/tuning.7
@@ -22,12 +22,12 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd April 16, 2020
+.Dd October 11, 2022
 .Dt TUNING 7
 .Os
 .Sh NAME
 .Nm tuning
-.Nd performance tuning under FreeBSD
+.Nd performance tuning under MidnightBSD
 .Sh SYSTEM SETUP - DISKLABEL, NEWFS, TUNEFS, SWAP
 The swap partition should typically be approximately 2x the size of
 main memory
@@ -480,7 +480,7 @@ By default
 is set at the maximum allowable port number.
 .Pp
 The
-.Va kern.ipc.somaxconn
+.Va kern.ipc.soacceptqueue
 sysctl limits the size of the listen queue for accepting new TCP connections.
 The default value of 128 is typically too low for robust handling of new
 connections in a heavily loaded web server environment.
