--- a/libmport/mport.3
+++ b/libmport/mport.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd February 3, 2022
+.Dd October 24, 2022
 .Dt MPORT 3
 .Os
 .Sh NAME
@@ -31,6 +31,7 @@
 .Nm mport_clean_oldpackages ,
 .Nm mport_create_primative ,
 .Nm mport_delete_primative ,
+.Nm mport_download ,
 .Nm mport_err_code ,
 .Nm mport_err_string ,
 .Nm mport_index_load ,
@@ -89,6 +90,8 @@
 .Ft int
 .Fn mport_delete_primative "mportInstance *mport" "mportPackageMeta *pack" "int force"
 .Ft int
+.Fn mport_download "mportInstance *mport" "const char *pkgname" "bool includeDependencies" "char **path"
+.Ft int
 .Fn mport_err_code
 .Ft const char *
 .Fn mport_err_string
@@ -109,7 +112,7 @@
 .Ft int
 .Fn mport_instance_free "mportInstance *mport"
 .Ft int
-.Fn mport_instance_init "mportInstance *mport" "const char *root"
+.Fn mport_instance_init "mportInstance *mport" "const char *root" "const char *outputPath" "bool noIndex"
 .Ft mportInstance *
 .Fn mport_instance_new
 .Ft void
@@ -219,6 +222,9 @@ The document part is ignored.
 FTP and HTTP proxies are supported; if no scheme is specified, FTP is
 assumed.
 If the proxy is an FTP proxy,
+.It Ev ASSUME_ALWAYS_YES
+If set to a non empty value, will assume any question should be answered
+with a yes.
 .Sh SEE ALSO
 .Xr mport 1 ,
 .Xr mports 7
