fix some branding issues.

--- a/stand/lua/menu.lua.8
+++ b/stand/lua/menu.lua.8
@@ -24,14 +24,12 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
-.\"
 .Dd February 23, 2018
 .Dt MENU.LUA 8
 .Os
 .Sh NAME
 .Nm menu.lua
-.Nd FreeBSD dynamic menu boot module
+.Nd MidnightBSD dynamic menu boot module
 .Sh DESCRIPTION
 .Nm
 contains the main functionality required to build a dynamic menu system.
