--- a/stand/lua/password.lua.8
+++ b/stand/lua/password.lua.8
@@ -24,14 +24,12 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
-.\"
 .Dd August 19, 2018
 .Dt PASSWORD.LUA 8
 .Os
 .Sh NAME
 .Nm password.lua
-.Nd FreeBSD password module
+.Nd MidnightBSD password module
 .Sh DESCRIPTION
 .Nm
 contains functionality for prompting for and checking passwords.
