--- a/stand/lua/screen.lua.8
+++ b/stand/lua/screen.lua.8
@@ -24,14 +24,12 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
-.\"
 .Dd August 19, 2018
 .Dt SCREEN.LUA 8
 .Os
 .Sh NAME
 .Nm screen.lua
-.Nd FreeBSD screen manipulation module
+.Nd MidnightBSD screen manipulation module
 .Sh DESCRIPTION
 .Nm
 contains functionality for manipulating the screen.
