--- a/stand/man/loader.8
+++ b/stand/man/loader.8
@@ -22,8 +22,6 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
-.\"
 .Dd October 8, 2021
 .Dt LOADER 8
 .Os
@@ -917,8 +915,8 @@ Does not work with
 .It arch-i386
 .Ic TRUE
 if the architecture is IA32.
-.It FreeBSD_version
-.Fx
+.It MidnightBSD_version
+.Mx
 version at compile time.
 .It loader_version
 .Nm
