--- a/stand/lua/color.lua.8
+++ b/stand/lua/color.lua.8
@@ -24,14 +24,12 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
-.\"
 .Dd August 19, 2018
 .Dt COLOR.LUA 8
 .Os
 .Sh NAME
 .Nm color.lua
-.Nd FreeBSD color module
+.Nd MidnightBSD color module
 .Sh DESCRIPTION
 .Nm
 contains functionality for working with colors.
