--- a/stand/lua/core.lua.8
+++ b/stand/lua/core.lua.8
@@ -24,14 +24,12 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
-.\"
 .Dd March 21, 2018
 .Dt CORE.LUA 8
 .Os
 .Sh NAME
 .Nm core.lua
-.Nd FreeBSD core module
+.Nd MidnightBSD core module
 .Sh DESCRIPTION
 .Nm
 contains core functionality that does not have a more fitting module.
