--- a/share/man/man4/re.4
+++ b/share/man/man4/re.4
@@ -30,7 +30,7 @@
 .\"
 .\" $FreeBSD: stable/11/share/man/man4/re.4 306309 2016-09-25 13:52:55Z kevlo $
 .\"
-.Dd September 21, 2016
+.Dd November 7, 2022
 .Dt RE 4
 .Os
 .Sh NAME
@@ -285,3 +285,6 @@ avoid this problem.
 .Pp
 The RealTek 8169, 8169S and 8110S chips appear to only be capable of
 transmitting jumbo frames up to 7.5K in size.
+.Pp
+If this driver is causing problems then an updated driver from
+the vendor can be found in ports under net/realtek-re-kmod.
