--- a/sbin/sysctl/sysctl.8
+++ b/sbin/sysctl/sysctl.8
@@ -28,7 +28,7 @@
 .\"	From: @(#)sysctl.8	8.1 (Berkeley) 6/6/93
 .\" $FreeBSD$
 .\"
-.Dd February 8, 2019
+.Dd June 30, 2022
 .Dt SYSCTL 8
 .Os
 .Sh NAME
@@ -323,6 +323,7 @@ was significantly remodeled.
 The
 .Nm
 utility presently exploits an undocumented interface to the kernel
-sysctl facility to traverse the sysctl tree and to retrieve format
+.Xr sysctl 9
+facility to traverse the sysctl tree and to retrieve format
 and name information.
 This correct interface is being thought about for the time being.
