--- a/lessecho.man
+++ b/lessecho.man
@@ -1,4 +1,4 @@
-LESSECHO(1)                                                        LESSECHO(1)
+LESSECHO(1)                 General Commands Manual                LESSECHO(1)
 
 
 
@@ -51,4 +51,4 @@ LESSECHO(1)                                                        LESSECHO(1)
 
 
 
-                           Version 458: 04 Apr 2013                LESSECHO(1)
+                           Version 551: 11 Jun 2019                LESSECHO(1)
