--- a/share/man/man4/ng_ccatm.4
+++ b/share/man/man4/ng_ccatm.4
@@ -31,7 +31,7 @@
 .\"
 .\" $FreeBSD: stable/11/share/man/man4/ng_ccatm.4 267938 2014-06-26 21:46:14Z bapt $
 .\"
-.Dd March 10, 2005
+.Dd March 3, 2023
 .Dt NG_CCATM 4
 .Os
 .Sh NAME
@@ -47,6 +47,11 @@
 .In netgraph.h
 .In netgraph/ng_uni.h
 .In netgraph/ng_ccatm.h
+.Sh DEPRECATION NOTICE
+.Nm
+is deprecated and may not be available in
+.Fx 14.0
+and later.
 .Sh DESCRIPTION
 The
 .Nm
