--- a/share/man/man4/ng_uni.4
+++ b/share/man/man4/ng_uni.4
@@ -28,7 +28,7 @@
 .\"
 .\" $FreeBSD: stable/11/share/man/man4/ng_uni.4 267938 2014-06-26 21:46:14Z bapt $
 .\"
-.Dd October 6, 2003
+.Dd March 3, 2023
 .Dt NG_UNI 4
 .Os
 .Sh NAME
@@ -38,6 +38,11 @@
 .In netnatm/msg/unistruct.h
 .In netnatm/sig/unidef.h
 .In netgraph/atm/ng_uni.h
+.Sh DEPRECATION NOTICE
+.Nm
+is deprecated and may not be available in
+.Fx 14.0
+and later.
 .Sh DESCRIPTION
 The
 .Nm uni
