--- a/share/man/man4/ng_atmllc.4
+++ b/share/man/man4/ng_atmllc.4
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: stable/11/share/man/man4/ng_atmllc.4 267938 2014-06-26 21:46:14Z bapt $
 .\"
-.Dd March 8, 2004
+.Dd March 3, 2023
 .Dt NG_ATMLLC 4
 .Os
 .Sh NAME
@@ -32,6 +32,11 @@
 .Nd ATM LLC netgraph node type
 .Sh SYNOPSIS
 .In netgraph/ng_atmllc.h
+.Sh DEPRECATION NOTICE
+.Nm
+is deprecated and may not be available in
+.Fx 14.0
+and later.
 .Sh DESCRIPTION
 The
 .Nm atmllc
