ldd: clarify format options
-f may be specified zero, one, or two times.  Make this clear in the
usage.

Reviewed by:	markj, kib
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D34733

(cherry picked from commit e9f8723c30fc390f1282f5286d57c090ed9e5925)
(cherry picked from commit 7bc6ce41d83353efa088942e3f3add38b98c3ada)

--- a/usr.bin/ldd/ldd.1
+++ b/usr.bin/ldd/ldd.1
@@ -1,6 +1,6 @@
 .\" $FreeBSD$
 .\"
-.Dd October 23, 2018
+.Dd March 21, 2023
 .Dt LDD 1
 .Os
 .Sh NAME
@@ -10,7 +10,7 @@
 .Nm
 .Op Fl a
 .Op Fl v
-.Op Fl f Ar format
+.Op Fl f Ar format Op Fl f Ar format
 .Ar program ...
 .Sh DESCRIPTION
 The
