--- a/usr.bin/doas/doas.1
+++ b/usr.bin/doas/doas.1
@@ -1,4 +1,3 @@
-.\" $MidnightBSD$
 .\" $OpenBSD: doas.1,v 1.16 2016/06/11 04:38:21 tedu Exp $
 .\"
 .\"Copyright (c) 2015 Ted Unangst <tedu@openbsd.org>
@@ -22,10 +21,11 @@
 .Nd execute commands as another user
 .Sh SYNOPSIS
 .Nm doas
-.Op Fl ns
+.Op Fl nSs
 .Op Fl a Ar style
 .Op Fl C Ar config
 .Op Fl u Ar user
+.Op Fl -
 .Ar command
 .Op Ar args
 .Sh DESCRIPTION
@@ -35,7 +35,8 @@ utility executes the given command as another user.
 The
 .Ar command
 argument is mandatory unless
-.Fl C
+.Fl C ,
+.Fl S ,
 or
 .Fl s
 is specified.
@@ -72,6 +73,12 @@ No command is executed.
 Non interactive mode, fail if
 .Nm
 would prompt for password.
+.It Fl S
+Same as
+.Fl s
+but simulates a full login. Please note this may result in doas applying resource limits
+to the user based on the target user's login class. However, environment variables
+applicable to the target user are still stripped, unless KEEPENV is specified.
 .It Fl s
 Execute the shell from
 .Ev SHELL
@@ -81,6 +88,11 @@ or
 Execute the command as
 .Ar user .
 The default is root.
+Please note: On some systems multiple usernames can resolve to one UID. For example, root and
+toor both resolve to UID 0 on FreeBSD. Please see the "as" syntax section of the doas.conf manual page for details on
+how doas handles this situation.
+.It Fl -
+Any dashes after a combined double dash (--) will be interpreted as part of the command to be run or its parameters. Not an argument passed to doas itself.
 .El
 .Sh EXIT STATUS
 .Ex -std doas
