--- a/README
+++ b/README
@@ -204,7 +204,7 @@ XZ Utils
 
     Several strings will change in a future version of xz so if you
     wish to start a new translation, look at the code in the xz git
-    repostiory instead of a 5.2.x release.
+    repository instead of a 5.2.x release.
 
 
 5. Other implementations of the .xz format
@@ -226,11 +226,10 @@ XZ Utils
 ----------------------
 
     If you have questions, bug reports, patches etc. related to XZ Utils,
-    contact Lasse Collin <lasse.collin@tukaani.org> (in Finnish or English).
-    I'm sometimes slow at replying. If you haven't got a reply within two
-    weeks, assume that your email has got lost and resend it or use IRC.
+    the project maintainers Lasse Collin and Jia Tan can be reached via
+    <xz@tukaani.org>.
 
-    You can find me also from #tukaani on Freenode; my nick is Larhzu.
-    The channel tends to be pretty quiet, so just ask your question and
-    someone may wake up.
+    You might find Lasse also from #tukaani on Libera Chat (IRC).
+    The nick is Larhzu. The channel tends to be pretty quiet,
+    so just ask your question and someone might wake up.
 
