cleanup devd config

--- a/sbin/devd/devd.conf.5
+++ b/sbin/devd/devd.conf.5
@@ -41,7 +41,7 @@
 .\" ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS
 .\" SOFTWARE.
 .\"
-.Dd August 18, 2020
+.Dd September 22, 2022
 .Dt DEVD.CONF 5
 .Os
 .Sh NAME
@@ -178,8 +178,6 @@ For network devices,
 will match devices that have the given media type.
 Valid media types are:
 .Dq Li Ethernet ,
-.Dq Li Tokenring ,
-.Dq Li FDDI ,
 .Dq Li 802.11 ,
 and
 .Dq Li ATM .
@@ -549,7 +547,7 @@ device has detected the lid openinging.
 .It Li PMU Ta Li POWER Ta ACLINE Ta
 The
 .Xr pmc 4
-device has deteted an AC line state ($notify=0x00 is offline, 0x01 is online).
+device has detected an AC line state ($notify=0x00 is offline, 0x01 is online).
 .It Li PMU Ta Li USB Ta overvoltage Ta
 An over-voltage condition on the power lines for the USB power pins.
 .It Li PMU Ta Li USB Ta plugged Ta
