--- a/share/man/man5/passwd.5
+++ b/share/man/man5/passwd.5
@@ -48,7 +48,7 @@ They can be used in conjunction with the Hesiod domains
 and
 .Sq Li uid ,
 and the
-.Tn NIS
+NIS
 maps
 .Sq Li passwd.byname ,
 .Sq Li passwd.byuid ,
@@ -309,7 +309,7 @@ lookups occur from the
 .Sq Li master.passwd.byname ,
 and
 .Sq Li master.passwd.byuid
-.Tn NIS
+NIS
 maps.
 .Sh COMPAT SUPPORT
 If
@@ -360,7 +360,7 @@ or
 .Sq Li passwd.byname
 and
 .Sq Li passwd.byuid
-.Tn NIS
+NIS
 maps (with
 .Sq Li passwd_compat: nis )
 to be included.
@@ -371,7 +371,7 @@ or
 .Ar gid
 fields, the specified numbers will override the information retrieved
 from the Hesiod domain or the
-.Tn NIS
+NIS
 maps.
 Likewise, if the
 .Ar gecos ,
@@ -380,20 +380,20 @@ or
 .Ar shell
 entries contain text, it will override the information included via
 Hesiod or
-.Tn NIS .
+NIS .
 On some systems, the
 .Ar passwd
 field may also be overridden.
 .Sh FILES
 .Bl -tag -width ".Pa /etc/master.passwd" -compact
 .It Pa /etc/passwd
-.Tn ASCII
+ASCII
 password file, with passwords removed
 .It Pa /etc/pwd.db
 .Xr db 3 Ns -format
 password database, with passwords removed
 .It Pa /etc/master.passwd
-.Tn ASCII
+ASCII
 password file, with passwords intact
 .It Pa /etc/spwd.db
 .Xr db 3 Ns -format
@@ -443,7 +443,7 @@ file format first appeared in
 .At v1 .
 .Pp
 The
-.Tn NIS
+NIS
 .Nm
 file format first appeared in SunOS.
 .Pp
